5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1716_2498.log
== TEST (2019-05-14 17:27:01) 
-- CODE:
a = int(input())
b = int(input())
pa = int(input())
pb = int(input())

acumular_a = a
acumular_b = b
anos= 0
while(acumular_a<acumular_b):
	cresa = a * pa
	cresb = b*pb
	total1 = cresa + acumular_a
	total2 = cresb + acumular_b
	anos = anos + 1
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pa = int(input())
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:27:34) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

acumular_a = a
acumular_b = b
anos= 0
while(acumular_a<acumular_b):
	cresa = a * pa
	cresb = b*pb
	total1 = cresa + acumular_a
	total2 = cresb + acumular_b
	anos = anos + 1
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pa = int(input())
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:32:32) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

pop_a = a
pop_b = b
anos= 0
while(pop_a<pop_b):
	cresa = a * pa
	cresb = b*pb
	pop_a = cresa + pop_a
	pop_b = cresb + pob_b
	anos = anos + 1
print(anos)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    pop_b = cresb + pob_b
NameError: name 'pob_b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:33:08) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

pop_a = a
pop_b = b
anos= 0
while(pop_a<pop_b):
	cresa = a * pa
	cresb = b*pb
	pop_a = cresa + pop_a
	pop_b = cresb + pop_b
	anos = anos + 1
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:33:38) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

pop_a = a
pop_b = b
anos= 0
while(pop_a<pop_b):
	cresa = a * pa
	cresb = b*pb
	pop_a = cresa + pop_a
	pop_b = cresb + pop_b
	anos = anos + 1
	print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:39:14) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

pop_a = a
pop_b = b
anos= 0
while(pop_a<pop_b):
	cresa = a * (pa/100)
	cresb = b * (pb/100)
	pop_a = cresa + pop_a
	pop_b = cresb + pop_b
	anos = anos + 1
print(anos)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:40:13) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

pop_a = a
pop_b = b
anos= 0
while(pop_a<pop_b):
	cresa = a * (pa/100)
	cresb = b * (pb/100)
	pop_a = cresa + pop_a
	pop_b = cresb + pop_b
	anos = anos + 1
	print(pop_a)
	print(pop_a)
print(anos)
	
-- OUTPUT:
338953.25
338953.25
427756.5
427756.5
516559.75
516559.75
605363.0
605363.0
694166.25
694166.25
782969.5
782969.5
871772.75
871772.75
960576.0
960576.0
1049379.25
1049379.25
1138182.5
1138182.5
1226985.75
1226985.75
1315789.0
1315789.0
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:40:30) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

pop_a = a
pop_b = b
anos= 0
while(pop_a<pop_b):
	cresa = a * (pa/100)
	cresb = b * (pb/100)
	pop_a = cresa + pop_a
	pop_b = cresb + pop_b
	anos = anos + 1
	print(pop_a)
	print(pop_a)
print(anos)
	
-- OUTPUT:
338953.25
338953.25
427756.5
427756.5
516559.75
516559.75
605363.0
605363.0
694166.25
694166.25
782969.5
782969.5
871772.75
871772.75
960576.0
960576.0
1049379.25
1049379.25
1138182.5
1138182.5
1226985.75
1226985.75
1315789.0
1315789.0
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:50:50) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

pop_a = a
pop_b = b
anos= 0
while(pop_a<pop_b):
	cresa = pop_a * (pa/100)
	cresb = pop_b * (pb/100)
	pop_a = cresa + pop_a
	pop_b = cresb + pop_b
	anos = anos + 1
	print(pop_a)
	print(pop_a)
print(anos)
	
-- OUTPUT:
338953.25
338953.25
459281.65375
459281.65375
622326.64083125
622326.64083125
843252.5983263438
843252.5983263438
1142607.2707321958
1142607.2707321958
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:51:31) 
-- CODE:
a = int(input())
b = int(input())
pa = float(input())
pb = float(input())

pop_a = a
pop_b = b
anos= 0
while(pop_a<pop_b):
	cresa = pop_a * (pa/100)
	cresb = pop_b * (pb/100)
	pop_a = cresa + pop_a
	pop_b = cresb + pop_b
	anos = anos + 1
	
print(anos)
	
-- EXECUTION TIME:
0.175144
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
